--- a/Algebraic Topology/Algebraic Topology.tex
+++ b/Algebraic Topology/Algebraic Topology.tex
@@ -2669,6 +2669,64 @@ $H_0(X)$ 是一些 $\mathbb{Z}$ 的直和，直和取遍道路连通分支的个
       \right) & \text{if $t_0\neq 1$}.
     \end{dcases}
   \]
+
+  定义 $c_n:S_n(X)\to S_{n+1}(X)$ 为 $c_n(\sigma)=\sigma_b$，然后线性
+  延拓为群同态。我们断言，对于 $n\geq 1$，有
+  \begin{equation}\label{eq:boundary of cn}
+    \partial_{n+1}c_n(\sigma)=\sigma-c_{n-1}\partial_n(\sigma).
+  \end{equation}  
+  如果我们忽略符号，这就是在说 $\sigma$ 上的锥体是 $\sigma$ 和
+  $\sigma$ 的边界上的锥体的并。我们可以以 $\sigma$ 为 $2$-单纯形的情况
+  为例：
+  \begin{center}
+    \begin{tikzpicture}[scale=1.3]
+      \draw [dashed] (0,0) coordinate [label=180:$e_0$] (e0) --
+        node[pos=0.6,below=5pt]{$\sigma$}
+        (3,0)
+        coordinate [label=0:$e_2$] (e2);
+      \draw (e2)  -- (1,-1.2) coordinate[label=-90:$e_1$] (e1) -- (e0);
+      \draw (1.4,1.5) coordinate[label=90:$b$](b) -- (e0);
+      \draw (b) -- (e1);
+      \draw (b) -- (e2);
+    \end{tikzpicture}
+  \end{center}
+  这里 $\sigma$ 是 $[e_0,e_1,e_2]$，$\sigma_b$ 是整个三棱锥。此时
+  $\sigma_b$ 的边界恰好为 $\sigma$ 以及三个面 $[b,e_0,e_1]$，
+  $[b,e_0,e_2]$ 和 $[b,e_1,e_2]$，其中每个面都是 $\sigma$ 的边界上的锥体。
+
+  如果 \eqref{eq:boundary of cn} 成立，那么定理的结论是显然的。因为对于任意
+  $\gamma\in S_n(X)$，那么根据线性性有
+  \[
+    \gamma=\partial_{n+1}c_n\gamma+c_{n-1}\partial_n\gamma,
+  \]
+  于是 $\gamma\in Z_n(X)$ 表明 $\gamma=\partial_{n+1}c_n\gamma\in B_n(X)$，
+  所以 $Z_n(X)=B_n(X)$，所以 $H_n(X)=0$。
+
+  下面我们证明 \eqref{eq:boundary of cn} 式。首先计算
+  $\sigma_b$ 的面映射，我们有
+  \[
+    (\sigma_b\varepsilon_0^{n+1})(t_0,\dots,t_{n})
+    =\sigma_b(0,t_0,\dots,t_n)=\sigma(t_0,\dots,t_n),
+  \]
+  以及 $1\leq i\leq n+1$ 时有
+  \[
+    (\sigma_b\varepsilon_i^{n+1})(t_0,\dots,t_n)=
+    \sigma_b(t_0,\dots,t_{i-1},0,t_{i+1},\dots,t_n).
+  \]
+  如果 $t_0=1$，那么 $\sigma_b(1,0,\dots,0)=b$。如果 $t_0\neq 1$，那么
+  上式右端为
+  \begin{align*}
+    &t_0b+(1-t_0)\sigma\left(\frac{t_1}{1-t_0},\dots,\frac{t_{i-1}}{1-t_0},0,\frac{t_i}{1-t_0},\dots,\frac{t_n}{1-t_0}\right)\\
+    &=t_0b+(1-t_0)\sigma\varepsilon_{i-1}^n\left(\frac{t_1}{1-t_0},\dots,\frac{t_n}{1-t_0}\right)\\
+    &=c_{n-1}(\sigma\varepsilon_{i-1}^n)(t_0,\dots,t_n).
+  \end{align*}
+  所以
+  \begin{align*}
+    \partial_{n+1}c_n\sigma&=\sum_{i=0}^{n+1}(-1)^i (c_n\sigma)\varepsilon_i^{n+1}
+    =\sigma+\sum_{i=1}^{n+1}(-1)^ic_{n-1}(\sigma\varepsilon_{i-1}^n)\\
+    &=\sigma-\sum_{i=0}^n(-1)^ic_{n-1}(\sigma\varepsilon_i^n)\\
+    &=\sigma-c_{n-1}\partial_n\sigma.\qedhere
+  \end{align*}
 \end{proof}
 
 
