--- a/Galois Theory/Galois Theory.tex
+++ b/Galois Theory/Galois Theory.tex
@@ -40,6 +40,8 @@
 \DeclareMathOperator\Fix{Fix}
 \DeclareMathOperator\rank{rank}
 \DeclareMathOperator\cha{char}
+\DeclareMathOperator\N{N}
+\DeclareMathOperator\Tr{Tr}
 
 \usepackage{enumitem}
 
