--- a/Galois Theory/Galois Theory.tex
+++ b/Galois Theory/Galois Theory.tex
@@ -6,7 +6,7 @@
   \normalfont \else \bfseries \fi}
 \makeatother
 
-\usepackage{tikz-cd,wrapstuff}
+\usepackage{tikz-cd}
 \usepackage{fixdif,siunitx,tikz,nicematrix}
 
 \input{font.def}
@@ -37,18 +37,18 @@
 \DeclareMathOperator\Aut{Aut}
 \DeclareMathOperator\id{id}
 \DeclareMathOperator\Gal{Gal}
+\DeclareMathOperator\PGL{PGL}
 \DeclareMathOperator\Fix{Fix}
 \DeclareMathOperator\rank{rank}
 \DeclareMathOperator\cha{char}
 \DeclareMathOperator\N{N}
 \DeclareMathOperator\Tr{Tr}
+\DeclareMathOperator\GL{GL}
 
 \usepackage{enumitem}
 
 \setlist[enumerate]{nosep,label=(\arabic*)}
 \setlist[itemize]{nosep}
-
-\usepackage[subscriptcorrection,nofontinfo,mtpbb]{mtpro2}
 
 
 %\DeclareMathAlphabet\mathcal{OMS}{cmsy}{m}{n}
