--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -38,13 +38,14 @@
 \DeclareMathOperator\GL{GL}
 \DeclareMathOperator\SL{SL}
 \DeclareMathOperator\Orth{O}
+\DeclareMathOperator\U{U}
 \DeclareMathOperator\SO{SO}
 \DeclareMathOperator\SU{SU}
 \DeclareMathOperator\Lie{Lie}
 \DeclareMathOperator\End{End}
 \DeclareMathOperator\Int{Int}
 \DeclareMathOperator\Sym{Sym}
-\DeclareMathOperator\Tr{Tr}
+\DeclareMathOperator\tr{tr}
 \DeclareMathOperator\Hom{Hom}
 \DeclareMathOperator\supp{supp}
 \DeclareMathOperator\Id{Id}
